--- a/hiding.tex
+++ b/hiding.tex
@@ -93,14 +93,15 @@ The proof of the following result is an immediate consequence of Proposition~\re
   \end{proof}
 \eprop
 
-
-Finally, the next proposition allows to \emph{remove} the hiding
+As usual in process algebras, it would be desirable that the hiding operator is \emph{derived}, that is, given a syntactic term, there exists a semantically equivalent term without occurrences of the hiding operator.
+The next proposition shows that this is the case: it is possible to \emph{remove} the hiding
 operator from any term. The idea is to substitute any occurrence of
-the hidden actions by the symbol $\bot$. Let us note that we cannot
-hide actions that appear in the restriction operators.
+the hidden actions by the symbol $\bot$ but taking into account  that we cannot
+hide actions that appear in the restriction operators. The proof of the following result is easy by structural induction and by Proposition~\ref{prop:hid}.
+
 \bprop
   Let $P,Q\in\fodaPAp$ be terms, $r\in (0,1]$ be a probability, and
-  $\calA\subseteq\calF$ be a set of hidden actions, then
+  $\calA\subseteq\calF$ be a set of hidden actions. We have:
   \begin{itemize}
   \item $\semdenp{\checkmark\hide\calA}=\semdenp{\checkmark}$
   \item $\semdenp{\nil\hide\calA}=\semdenp{\nil}$
@@ -123,10 +124,10 @@ hide actions that appear in the restriction operators.
   \item If $\fA,\fB\not\in\calA$ entonces
     $\semdenp{(\exclude{B}{P})\hide\calA}=\semdenp{\exclude{A}{B}{(P\hide\calA)}}$
   \end{itemize}
-  \begin{proof}
-    In order to prove this properties it is enough to apply
-    Proposition~\ref{prop:hid}.
-  \end{proof}
+%  \begin{proof}
+%    In order to prove this properties it is enough to apply
+%    Proposition~\ref{prop:hid}.
+%  \end{proof}
 \eprop
 
 
