--- a/consistency.tex
+++ b/consistency.tex
@@ -2,7 +2,7 @@
 %\label{sec:stat:consis}
 
 
-Finally we prove an important property of our probabilistic language: its consistency. We say that a non-probabilistic SPL model is \emph{consistent} if it has products~\cite{acl13}.  In our case, we can define consistency by having $\ham(P)>0$. We will prove that a translation from our probabilistic framework into the non-probabilistic one keeps consistency in the expected way.
+Next we prove an important property of our language: its consistency. We say that a non-probabilistic SPL model is \emph{consistent} if it has products~\cite{acl13}.  In our case, we can define consistency by having $\ham(P)>0$. We will prove that a translation from our probabilistic framework into the non-probabilistic one keeps consistency in the expected way.
 
 \bdfn
   We define the translation function $\np:\fodaPAp\mapsto \fodaPA$ as follows:
@@ -26,7 +26,7 @@ Finally we prove an important property of our probabilistic language: its consis
 
 The proof of the following result is straightforward by taking into account that our operational semantics rules are the same, if we discard probabilities, as in~\cite{acl13}. Therefore, any sequence of transitions
 derived in the probabilistic model can be also derived in the non
-probabilistic. In addition, by
+probabilistic one. In addition, by
 Lemma~\ref{lem:sum:prob}  we know that any derived trace in the
 probabilistic model has a non null probability.
 
