--- a/appendix.tex
+++ b/appendix.tex
@@ -1,5 +1,5 @@
 \appendix
-\section{Proofs of Section~\ref{sec:equivalence}}\label{app:proofs}
+\section{Results for the proofs of Proposition~\ref{prop:DenoOpe}}\label{app:proofs}
 
 \blem\label{lem:pref}
   Given $P\in\fodaPAp$ and $\feature{A}\in\calF$,
