--- a/equivalence.tex
+++ b/equivalence.tex
@@ -20,7 +20,7 @@ better in any moment. The proof of the following result is an immediate conseque
 \end{array}$$
 \eprop
 
-The proof of the following result is an immediate consequence, by structural induction on $P$, of
+Finally, we have the previously announced result. The proof, by structural induction on $P$, is easy from
 Proposition~\ref{prop:DenoOpe}.
 
 %  \ref{prop:pref}, \ref{prop:prefopt}, \ref{prop:choice},
