--- a/hiding.tex
+++ b/hiding.tex
@@ -65,10 +65,8 @@ of a given product.
     \end{cases}
   \end{displaymath}
   
-  Analogously, for any sequence $s\in\calF^{*}$ we consider taht $s\hide\calA$ denotes the
-  trace resulting of
-  substituting any  occurrence of a feature $\fA\in\calA$ by
-  the symbol~$\bot$ in~$s$.
+  Analogously, for any sequence $s\in\calF^{*}$ we consider that $s\hide\calA$ denotes the
+  trace produced from $s$ after replacing all the occurrences of features belonging to $\calA$ by the symbol~$\bot$ in~$s$.
 \edfn
 
 \bdfn
