--- a/hiding.tex
+++ b/hiding.tex
@@ -83,12 +83,8 @@ operational semantics and the denotational semantics coincide.
 The proof of the following result is an immediate consequence of Proposition~\ref{prop:appendixB} (see Appendix~\ref{appendixB}).
 %This is proven by the next result.
 
-\bprop\label{prop:hid}
-  \begin{displaymath}
-    \prodp(P\hideA)  = \semdenp{\prodp(P)\hideA}
-  \end{displaymath}
-  \begin{proof}
-  \end{proof}
+\bprop\label{prop:hid}Let $\calA\subseteq \calF$ be a subset of features and
+  $P\in\fodaPAp$ be a term. We have $ \prodp(P\hideA)  = \semdenp{\prodp(P)\hideA}$.
 \eprop
 
 As usual in process algebras, it would be desirable that the hiding operator is \emph{derived}, that is, given a syntactic term, there exists a semantically equivalent term without occurrences of the hiding operator.
