--- a/conclussions.tex
+++ b/conclussions.tex
@@ -1,7 +1,7 @@
 \section{Conclusions}
 \label{section:jstat:concs}
 
-Once described all the problems relates to the combinatory explosion
+Once described all the problems related to the combinatory explosion
 for some of the algebra's operators, we aim to generate enough information
 allowing to determine the probability of a probability in the valid
 products set.
@@ -15,3 +15,8 @@ Also this extension was proven to be consistent against the presented definition
 and with the non probabilistic models.
 %
 The implementation of this extension allows to compute and calculate the probability of the features among the valid products.
+
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: "main"
+%%% End: 
