--- a/testing.tex
+++ b/testing.tex
@@ -4,12 +4,12 @@
 \label{sec:stat:impl}
 
 This section presents the results obtained from an experimental study to show the applicability of our 
-approach. These experiments have been carried out by using our implementation of the denotational 
+approach. The simulation were executed based on the implementation of the denotational 
 semantics for the probabilistic extension. The source code is available at the main project site 
-\footnote{http://simba.fdi.ucm.es/at/probabilistic/implementation\_splap.tar}. In these experiments, 
-different variability models consisting of 1500 features have been used. The generator of model 
-features BeTTy has been used to create these models~\cite{SeguraHBC11}. The parameters for 
-generating the BeTTy models are following described:
+\footnote{http://simba.fdi.ucm.es/at/probabilistic/implementation\_splap.tar}. In the
+execution was used a variability model consisting of 1500 features, this variability model
+was generated randomly using BeTTy~\cite{SeguraHBC11}. The parameters for 
+generating the BeTTy model are the following:
 
 \begin{itemize}
 	\item The probability of having a mandatory feature is 0.2.
