--- a/conclussions.tex
+++ b/conclussions.tex
@@ -29,7 +29,13 @@ show that the obtained performance is s linear with respect to the total length 
 %
 %The implementation of this extension allows to compute and calculate the probability of the features among the valid products.
 %
-As future work we plan to extend our approach for...\acomen{Ni idea de qué poner aquí :(}
+As future work we plan to extend our approach%for...\acomen{Ni idea de qué poner aquí :(}
+to find mechanisms allowing to simplify or optimize terms
+based on the results of the probabilistic analysis, also
+we plan to find practical use cases for this probabilistic
+extension over \SPLs.
+
+
 
 %%% Local Variables: 
 %%% mode: latex
