--- a/conclussions.tex
+++ b/conclussions.tex
@@ -17,7 +17,10 @@ The results of this study show that, using our approach, it is possible to calcu
 the probability of each feature in the \SPL\ to be present in a valid product. 
 Thus, the testing process can be focused in those features having a high probability 
 of being included in a product. Moreover, the implementation of our proposed algorithm
-show that the obtained performance is s linear with respect to the total length of the \SPL.
+show that the obtained performance is linear with respect to the total
+length of the \SPL.\lcomen{¿qué significa eso?, no hemos demostrado
+  nada de complejidad.}
+
 %
 %To do so we have defined new syntactical operators for the probabilistic
 %extension. Once defined, we have represented the extension to give a logical
